kubernetes/darkmore/opensearch/dashboards-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https
  namespace: kgateway-system
spec:
  hostnames:
    - opensearch-dashboards.infrastructure.ramona.fun
  parentRefs:
    - name: gateway-tailscale 
      namespace: kgateway-system
      sectionName: http
  rules:
    - backendRefs:
        - kind: Service
          name: opensearch-dashboards
          namespace: opensearch-dashboards
          port: 5601
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
